--- a/config/config.env
+++ b/config/config.env
@@ -1,2 +1,3 @@
 NODE_ENV=development
 PORT=5000
+MONGO_URI = mongodb+srv://adam:adam1234@cluster0.koqmd.mongodb.net/<storybooks>?retryWrites=true&w=majority
