--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
   "name": "expense-tracker-react",
   "version": "1.0.0",
-  "description": "Backedn Portion of Expense",
+  "description": "Backend Portion of Expense",
   "main": "server.js",
   "scripts": {
     "start": "node server",
-    "server": "nodemon server"
+    "server": "nodemon server",
+    "client": "npm start --prefix client",
+    "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "repository": {
     "type": "git",
